info/test.log
2025.10.16 02:45:56

> Task :clean
> Task :compileJava
> Task :processResources NO-SOURCE
> Task :classes

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/olek/Projekty/zajecia/io/gold_rush_test_students/build/reports/problems/problems-report.html
3 actionable tasks: 3 executed
[STDERR]
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:1: error: cannot find symbol
import edu.io.Board;
             ^
  symbol:   class Board
  location: package edu.io
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:2: error: cannot find symbol
import edu.io.Token;
             ^
  symbol:   class Token
  location: package edu.io
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:12: error: cannot find symbol
    Board board;
    ^
  symbol:   class Board
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:1: error: cannot find symbol
import edu.io.Token;
             ^
  symbol:   class Token
  location: package edu.io
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:16: error: cannot find symbol
        board = new Board();
                    ^
  symbol:   class Board
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:26: error: cannot find symbol
        Token t = new Token(PLAYER_TOKEN_LABEL);
        ^
  symbol:   class Token
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:26: error: cannot find symbol
        Token t = new Token(PLAYER_TOKEN_LABEL);
                      ^
  symbol:   class Token
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:33: error: cannot find symbol
        board.placeToken(1, 2, new Token(GOLD_TOKEN_LABEL));
                                   ^
  symbol:   class Token
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:34: error: cannot find symbol
        board.placeToken(board.size-1, board.size-1, new Token(GOLD_TOKEN_LABEL));
                                                         ^
  symbol:   class Token
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:42: error: cannot find symbol
            Board.class.getMethod("display");
            ^
  symbol:   class Board
  location: class BoardTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:8: error: cannot find symbol
        Token token = new Token("@");
        ^
  symbol:   class Token
  location: class TokenTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:8: error: cannot find symbol
        Token token = new Token("@");
                          ^
  symbol:   class Token
  location: class TokenTest
/home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:14: error: cannot find symbol
        Assertions.assertEquals(1, Token.class.getConstructors().length);
                                   ^
  symbol:   class Token
  location: class TokenTest
13 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:1: error: cannot find symbol
  import edu.io.Board;
               ^
    symbol:   class Board
    location: package edu.io
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:2: error: cannot find symbol
  import edu.io.Token;
               ^
    symbol:   class Token
    location: package edu.io
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:12: error: cannot find symbol
      Board board;
      ^
    symbol:   class Board
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:1: error: cannot find symbol
  import edu.io.Token;
               ^
    symbol:   class Token
    location: package edu.io
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:16: error: cannot find symbol
          board = new Board();
                      ^
    symbol:   class Board
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:26: error: cannot find symbol
          Token t = new Token(PLAYER_TOKEN_LABEL);
          ^
    symbol:   class Token
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:26: error: cannot find symbol
          Token t = new Token(PLAYER_TOKEN_LABEL);
                        ^
    symbol:   class Token
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:33: error: cannot find symbol
          board.placeToken(1, 2, new Token(GOLD_TOKEN_LABEL));
                                     ^
    symbol:   class Token
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:34: error: cannot find symbol
          board.placeToken(board.size-1, board.size-1, new Token(GOLD_TOKEN_LABEL));
                                                           ^
    symbol:   class Token
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/BoardTest.java:42: error: cannot find symbol
              Board.class.getMethod("display");
              ^
    symbol:   class Board
    location: class BoardTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:8: error: cannot find symbol
          Token token = new Token("@");
          ^
    symbol:   class Token
    location: class TokenTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:8: error: cannot find symbol
          Token token = new Token("@");
                            ^
    symbol:   class Token
    location: class TokenTest
  /home/olek/Projekty/zajecia/io/gold_rush_test_students/src/test/java/TokenTest.java:14: error: cannot find symbol
          Assertions.assertEquals(1, Token.class.getConstructors().length);
                                     ^
    symbol:   class Token
    location: class TokenTest
  13 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 840ms